--- a/user/om_73/range rover/info.html
+++ b/user/om_73/range rover/info.html
@@ -387,7 +387,7 @@ x.style.display = "none";
 var name = "Om Lokhande | Akash Mhais | Prashant Londhe | Ruchika Mapari";
 var roll = "73, 74, 75, 76";
 var branch = "Mechanical Department";
-var img = "img/demo.png";
+var img = "img/3.jpg";
 // img.setAttribute("src", "img/ds.jpg");
 document.getElementById("grp-img").innerHTML = '<img src="' + img + '" class="grp-img">';
 document.getElementById("grp-nme").innerHTML = name;
