--- a/user/om_73/range rover/index.html
+++ b/user/om_73/range rover/index.html
@@ -177,6 +177,14 @@
         margin: 20px 0px;
         box-shadow: 0px 0px 0px rgb(56, 56, 56);
     }
+    .yt-vid{
+        border: 2px rgba(0, 0, 0, 0) solid;
+        width: 100%;
+    }
+    .iframe{
+        width: 100%;
+        height: 200px;
+    }
 }
     </style>
     <script>
@@ -202,7 +210,7 @@
 
     <div class="yt-vid">
         <center>
-    <iframe class="iframe" src="https://www.youtube.com/embed/SC9S1CP9RNM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="iframe" src="https://www.youtube.com/embed/Y4eBULrca8M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </center>
     </div>
 <br><br>
