--- a/user/om_73/range rover/expanded.html
+++ b/user/om_73/range rover/expanded.html
@@ -253,6 +253,8 @@
     </style>
 </head>
 <body>
+    <div id="notice" class="maintain-container"></div>
+    <div class="home">
     <div id="navbar"></div><br><br><br><br><br>
     <center>
         <h1>Expanded Models</h1>
@@ -696,6 +698,7 @@
     </div>
 
     <div id="explore"></div>
+    </div>
     <script src="js/global.js"></script>
 </body>
 </html>
