--- a/user/om_73/range rover/pricing.html
+++ b/user/om_73/range rover/pricing.html
@@ -185,6 +185,8 @@
     </style>
 </head>
 <body>
+    <div id="notice" class="maintain-container"></div>
+    <div class="home">
 <div id="navbar"></div><br><br><br><br><br>
     <center>
         <h1>Pricing</h1>
@@ -275,6 +277,7 @@
         </div>
 
     <div id="explore"></div>
+    </div>
     <script>
         function more(){window.location.href = "https://www.cardekho.com/cars/Land_Rover";}</script>
     <script src="js/global.js"></script>
