--- a/user/om_73/range rover/info.html
+++ b/user/om_73/range rover/info.html
@@ -324,6 +324,8 @@
     </style>
 </head>
 <body>
+    <div id="notice" class="maintain-container"></div>
+    <div class="home">
     <div id="navbar"></div><br><br><br><br><br>
     <center>
         <h1>Info</h1>
@@ -373,6 +375,7 @@
 
 
 <div id="explore"></div>
+</div>
 <script>
     function generations(){window.location.href = "generations.html";}
     function expanded(){window.location.href = "expanded.html";}
